# toy-task

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
src/: core_urls.py  manage.py
src/decks/: entities.py  models.py  urls.py  views.py
src/decks/migrations/: 0001_initial.py
src/toys/: __main__.py  settings.py
tests/: conftest.py
tests/decks/: test_views.py
tests/toys/: test_main.py
