[project]
name = "toys"
version = "0"

[tool.poetry]
name = "toys"
version = "0.0.1"
description = "A toy management system"
authors = ["Ewan Jones"]

[tool.poetry.dependencies]
Django = "<4.2"
python = "3.11.4"
envparse = "^0.2.0"
pydantic = "2.1.1"
psycopg2-binary = "^2.9.1"
pytest-django = "^4.5.2"
django-stubs = "^4.2.3"


[tool.poetry.group.dev.dependencies]
# Testing and debugging tools
pytest = "*"
ipdb = "^0.13.9"
# Code auto-formatting
black = "*"
isort = "*"
# Linting
flake8 = "*"
Flake8-pyproject = "*"
import-linter = "*"
mypy = "*"


[tool.black]
line-length = 99

[tool.importlinter]
root_package = "toys"

[[tool.importlinter.contracts]]
name = "Top level layers"
type = "layers"
exhaustive = true
containers= ["toys"]
layers = ["__main__"]

[tool.isort]
line_length = 99
profile = "black"
default_section = "THIRDPARTY"
lines_after_imports = 2

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types.
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "toys.settings"
